<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.ActivityLogin"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/email"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email">

        <com.bangkit.healthyme.ui.custom.CustomEmail
            android:id="@+id/ce_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/droid_sans"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginTop="12dp"
        android:text="@string/password"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/input_email"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_pw"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password">

        <com.bangkit.healthyme.ui.custom.CustomPassword
            android:id="@+id/cp_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cb_remember_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/droid_sans"
        android:text="@string/remember_me"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/input_pw"
        app:layout_constraintTop_toBottomOf="@+id/input_pw" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_masuk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:background="@drawable/custom_button_box"
        android:text="@string/masuk"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_remember_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_daftar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="@drawable/custom_button_box"
        android:text="@string/daftar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_masuk"
        app:layout_constraintStart_toStartOf="@+id/btn_masuk"
        app:layout_constraintTop_toBottomOf="@+id/btn_masuk" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>